--- a/index.html
+++ b/index.html
@@ -9,37 +9,7 @@
 <body>
     <h1>hoshi</h1> <!-- ur chatbot title here too -->
     <p>all about weather</p> <!-- ur chatbot description here -->
-    <pre>
-    ::name hoshi
-::category Weather
-::language en
-::author hoshi
-::author_url <author_url>
-::description all abouy weather 
-::dynamic_content <Yes/No>
-::developer_privacy_policy <link>
-::image images/<image_name>
-::terms_of_use <link>
-
-
-help
-I am hoshi and I can answer any question on weather. For example, you can ask me what is your favourite weather, what types of weather are there, etc.
-
-what is your favourite weather
-windy|sunny
-
-what types of weather are there
-sunny|rainy|stormy|windy|snowstorm|thunderstorm
-
-what do you do on a rainy day
-play at home|sleep at home|study at home
-
-what do you do on a sunny day
-go for a picnic
-
-what do you do on windy day
-fly kites
-</pre> <!-- ur chatbot code here -->
+    <pre><script type='text/javascript' id='susi-bot-script' data-userid='e1ee063ddbcb0262985159ffc44e55c9' data-group='Weather' data-language='en' data-skill='hoshi' src='https://skills.susi.ai/susi-chatbot.js'></script></pre> <!-- ur chatbot code here -->
    <!-- ur script here -->
     
 </body>
